2014-05-20  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/window.c (window_initialize_windows): Use xzalloc to
	allocate an object with all bytes 0.
	* info/info.h (zero_mem): Removed.

	* info/t/Init-intera.inc: Extra line of output reporting on progress.

	* info/session.c (info_end_of_line): Get end of line from line_map
	object.
	* info/window.c (window_scan_line, window_compute_line_map):
	Functions merged.
	(add_line_map): Merged into the new window_compute_line_map.
	(window_end_of_line): Removed.
	* info/t/end-of-line.sh: New test.

2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/t/Init-intera.inc: Confirm pts file exists before redirecting
	stdin, stdout and stderr.
	* info/t/README: File added.

	* info/info-utils.c (printed_representation): Proper cursor
	positioning for multi-column characters.

2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodemenu.c (get_visited_nodes): Don't reuse a local
	variable for an unrelated purpose.  Declared static.  Argument
	not set to anything other than null in calling code removed.  All
	callers updated.
	* (select_visited_node): Don't free objects too early and always
	free them before function exit.
	* info/window.c (message_buffer_to_node): Comment changed.

2014-05-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.texi (Invoking Info): Mention differences in groff
	terminal output.

2014-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (scan_reference_label): Simpler logic for
	setting start and end fields of reference.
	(skip_input): Don't touch output_bytes_difference if not rewriting
	node.

	* info/info-utils.c (scan_reference_target): [preprocess_nodes=On]
	Better condition for which line to output file specifier on.

	* info/pseudotty.c: Don't exit on a read error.

2014-05-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (build_dir_node): Unused local variable deleted.
	* info/indices.c (info_next_index_match): Unused local variable